# protog

./: CMakeLists.txt  LICENSE  README.md
examples/openrtb/: openrtb.pb.cc  openrtb.pb.h
src/: parser.h  protog.cpp  writer.h  yajl_writer.h
test/: CMakeLists.txt  messages.proto  test_nested_message.cpp  test_simple_message.cpp
